<resources>
    <string name="app_name">RxJava Retrolambda</string>
    <string name="singles_act_error_message">Oops. An Error Occurred.</string>
    <string name="subjects_act_increment">Increment</string>
    <string name="together_act_no_results">No Results Found</string>
    <string name="together_act_search_hint">Type City Name Here</string>
    <string name="retrofit_frag_clear">Clear</string>
    <string name="retrofit_frag_fetch">Fetch</string>
    <string name="retrofit_no_data">No data</string>
    <string name="flat_map_frag_btn_text_flat_map">Observable.flatMap()</string>
    <string name="flat_map_frag_btn_text_concat_map">Observable.concatMap()</string>
    <string name="flat_map_frag_tv_label_original_order">Original stream order:</string>
    <string name="flat_map_frag_tv_label_flatMap_result">flatMap() Unordered result:</string>
    <string name="flat_map_frag_tv_label_concatMap_result">concatMap() Ordered result:</string>
    <string name="flat_map_frag_concat_vs_flat_map">This sample demonstrates an
    observable transformation by applying a function (square of a number) to a set of values.
    The basic idea is to see the difference between both flatMap() and concatMap() methods whereas
    one take care of the order and the other does not.</string>
</resources>