<android.support.percent.PercentRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/retrofit_frag_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.thedeveloperworldisyours.hellorxjava.complex.rxjavaretrofit.RetrofitFragment">

    <Button
        android:id="@+id/retrofit_frag_clear"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/white"
        android:gravity="center"
        android:text="@string/retrofit_frag_clear"
        app:layout_heightPercent="10%"
        app:layout_marginLeftPercent="2%"
        app:layout_marginRightPercent="2%"
        app:layout_marginTopPercent="5%"
        app:layout_widthPercent="46%" />

    <Button
        android:id="@+id/retrofit_frag_fetch"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_toRightOf="@+id/retrofit_frag_clear"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/white"
        android:gravity="center"
        android:text="@string/retrofit_frag_fetch"
        app:layout_heightPercent="10%"
        app:layout_marginLeftPercent="2%"
        app:layout_marginRightPercent="2%"
        app:layout_marginTopPercent="5%"
        app:layout_widthPercent="46%" />

    <TextView android:id="@+id/retrofit_frag_no_data"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/retrofit_no_data"
        android:layout_below="@+id/retrofit_frag_clear"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:textSize="20sp"
        app:layout_heightPercent="10%"
        app:layout_marginTopPercent="40%"
        app:layout_widthPercent="100%" />

    <ProgressBar
        android:id="@+id/retrofit_frag_progress"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_below="@+id/retrofit_frag_clear"
        android:layout_centerInParent="true"
        app:layout_heightPercent="10%"
        app:layout_marginTopPercent="40%"
        app:layout_widthPercent="100%"
        android:visibility="gone"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/retrofit_frag_recycle_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_below="@+id/retrofit_frag_clear"
        android:layout_centerInParent="true"
        app:layout_marginTopPercent="5%"
        app:layout_heightPercent="100%"
        app:layout_widthPercent="100%"
        android:visibility="gone"/>

</android.support.percent.PercentRelativeLayout>
